<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  main view -->
    <string name="app_name">Box Lab App</string>
    <string name="title_main_activity">Box Lab App</string>
    <string name="title_activity_exercise3d">Exercise</string>
    <string name="title_activity_manage_devices">Manage devices</string>
    
    <!--  nav bar -->
    <string name="menu_refresh">Refresh the calendar</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">How to use this app</string>
    <string name="menu_settings">Settings</string>
    <string name="fragment_schedule">Schedule</string>
    <string name="fragment_messages">Messages</string>
    <string name="fragment_library">Library</string>
    <string name="action_settings">Settings</string>
        
   <!-- exercise activity -->
	<string name="e3d_sets">Sets</string>
	<string name="e3d_reps">Repetitions</string>
	<string name="e3d_sep">/</string>
	<string name="e3d_tit_nf">Exercise name not found</string>
	<string name="e3d_content_nf">There was an error and the exercise data has not been loaded.</string>
	<string name="e3d_ast">*</string>
	<string name="e3d_chest">Chest</string>
	<string name="e3d_thigh">Thigh</string>
	<string name="e3d_shin">Shin</string>
	
    <!-- device manager strings -->
    <string name="devicemanager_title">Device manager</string>
    <string name="devicemanager_subtitle">Setup devices</string>
    <string name="devicemanager_dialog">Edit or delete devices</string>
    <string name="devicemanager_edit_device">Edit device</string>
    <string name="devicemanager_delete_device">Clear device</string>
    <string name="devicemanager_cancel">Cancel</string>
    <string name="devicemanager_dialog_id">Device ID</string>
    <string name="devicemanager_dialog_id_hint">Please enter a device id</string>
    <string name="devicemanager_dialog_type">Device type</string>

    <!-- schedule fragment -->
    <string name="schedule_empty">There are no exercises for the selected date.</string>
    <string name="e3d_extra_help">Need extra help?</string>
    
    <!-- messages fragment -->
    <string name="messages_hint">Write your message for the therapist.</string>
    <string name="messages_send">Send</string>
    <string name="messages_you">You:</string>
    <string name="messages_therapist">Therapist:</string>
</resources>
