<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/device_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lbl_device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devicemanager_dialog_id" />

    <EditText
        android:id="@+id/dialog_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/devicemanager_dialog_id_hint" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devicemanager_dialog_type"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/dialog_device_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
