<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exercise_3d_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
         <TextView
         android:id="@+id/exercise_3d_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/normal_margin"
         android:layout_marginLeft="@dimen/normal_margin"
         android:layout_marginRight="@dimen/normal_margin"
         android:text="@string/e3d_tit_nf"
         android:textAppearance="?android:attr/textAppearanceLarge" />

         <TextView
             android:id="@+id/exercise_3d_help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/double_margin"
             android:text="@string/e3d_extra_help" 
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#FF4444"
             android:visibility="gone" />
        
         <TextView
         android:id="@+id/exercise_3d_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/normal_margin"
         android:layout_marginTop="@dimen/double_margin"
         android:layout_marginBottom="@dimen/normal_margin"
         android:text="@string/e3d_content_nf"
         android:textAppearance="?android:attr/textAppearanceMedium" />

         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/double_margin"
         android:orientation="horizontal"
         android:baselineAligned="false" >
                                
        		 <LinearLayout
         		 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="4" >
                
                 <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/e3d_sets"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
	                 <LinearLayout
	                 android:layout_width="match_parent"
	                 android:layout_height="wrap_content" >
	
	                 <TextView
	                 android:id="@+id/exercise_3d_set_counter"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text="@string/e3d_ast"
	                 android:textSize="@dimen/counter" />
	                
	                 <TextView
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text="@string/e3d_sep"
	                 android:textSize="@dimen/counter" />
	                
	                 <TextView
	                 android:id="@+id/exercise_3d_set_max"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text="@string/e3d_ast"
	                 android:textSize="@dimen/counter" />
	
	                 </LinearLayout>
         </LinearLayout>

        		 <LinearLayout
        		     android:layout_width="wrap_content"
        		     android:layout_height="wrap_content"
        		     android:layout_weight="1"
        		     android:orientation="vertical" >

        		     <TextView
        		         android:layout_width="wrap_content"
        		         android:layout_height="wrap_content"
        		         android:text="@string/e3d_reps"
        		         android:textAppearance="?android:attr/textAppearanceMedium" />

        		     <LinearLayout
        		         android:layout_width="match_parent"
        		         android:layout_height="wrap_content" >

        		         <TextView
        		             android:id="@+id/exercise_3d_reps_counter"
        		             android:layout_width="wrap_content"
        		             android:layout_height="wrap_content"
        		             android:text="@string/e3d_ast"
        		             android:textSize="@dimen/counter" />

        		         <TextView
        		             android:layout_width="wrap_content"
        		             android:layout_height="wrap_content"
        		             android:text="@string/e3d_sep"
        		             android:textSize="@dimen/counter" />

        		         <TextView
        		             android:id="@+id/exercise_3d_reps_max"
        		             android:layout_width="wrap_content"
        		             android:layout_height="wrap_content"
        		             android:text="@string/e3d_ast"
        		             android:textSize="@dimen/counter" />
        		     </LinearLayout>
        		 </LinearLayout>
        
</LinearLayout>
</LinearLayout>